2001-06-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm (orac_process_argument_list): Fix warning when using
	-skip but no -loop

2001-05-17  Tim Jenness  <timj@jach.hawaii.edu>

	* General.pm: Add cosdeg. Move it from primitives
	(dectodms): Move dectodms from _CREATE_STANDARD_ (CGS4) 

2001-05-04  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_exit_normally): Realise that \a can be used for beep.

2001-05-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Xorac/Process.pm (xorac_start_process): Support changes to Core

	* Core.pm (orac_process_argument_list): Rejig so that it is
	simpler and handles "-skip -loop wait"
	(orac_print_configuration): Handle ORAC_ARGS
	(orac_calib_override): Handle array of cal options

2001-04-30  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm: Tweak Michelle header translation 

2001-04-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Group/UFTI.pm (calc_orac_headers): Inherit from ORAC::Group::UKIRT

	* Group/IRCAM.pm (calc_orac_headers): Inherit from ORAC::Group::UKIRT

2001-04-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Group.pm: Add subgrp(s) with uhdr check

	* Frame.pm (template): Fix bug in base class implementation

	* General.pm: Pod tidy

	* Msg/Task/ADAMShell.pm: Fix unrecognized escapes

	* Frame/UFTI.pm (template): Fix "my" masking

	* Frame/MichTemp.pm (template): Fix "my" masking

	* Inst.pm (_algeng): bug wit hvoid context

	* Calib/Michelle.pm: Create

	* Calib/IRCAM.pm: Add warnings and File::Spec

	* Index.pm: White space + add warnings pragma

        --- Starlink V2.1-1 + make branch --------
	
2001-04-16  Tim Jenness  <timj@jach.hawaii.edu>

	* Display.pm (display_data): Fix typo in checking @_ rather than $@!

	* Display/KAPVIEW.pm (histogram): Need to quote the range

2001-04-15  Tim Jenness <t.jenness@jach.hawaii.edu>

	* Release ORAC-DR 2.1-0 to Starlink

2001-04-11  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm: Fix pod error and remove header() and userheader() 
