@@ -1,5 +1,8 @@
 2001-06-04  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Calib/SCUBA.pm: Allow for different FCFs with different times
+	rather than just for different filters.
+
 	* Core.pm (orac_process_argument_list): Fix warning when using
 	-skip but no -loop
 
